# coupled_chan_rs

./: .gitignore  Cargo.toml  drive.toml
benches/: Cargo.toml
benches/benches/: operator_creation.rs
coupled_chan_py/: pyproject.toml
coupled_chan_py/src/cc_analysis/: plots.py  results.py  units.py  utility.py
crates/cc_problems/: Cargo.toml
crates/cc_problems/src/: alkali_atom_rotor.rs  alkali_diatom.rs  alkali_homo_diatom.rs  atom_atom_problem.rs  atom_rotor_basis.rs  atom_rotor_problem.rs  atom_structure.rs  bound_states.rs  diatom_basis.rs  diatom_structure.rs  homo_diatom_basis.rs  homo_diatom_structure.rs  lib.rs  operator_mel.rs  prelude.rs  problems.rs  rotor_structure.rs  system_structure.rs  tram_basis.rs
crates/constants/: Cargo.toml
crates/constants/src/: lib.rs  units.rs
crates/constants/src/units/: atomic_units.rs
crates/coupled_chan/: Cargo.toml
crates/coupled_chan/src/: coupling.rs  lib.rs  log_derivative.rs  ratio_numerov.rs  s_matrix.rs
crates/coupled_chan/src/coupling/: composite.rs  diagonal.rs  masked.rs  pair.rs
crates/coupled_chan/src/log_derivative/: diabatic.rs
crates/coupled_chan_cli/: Cargo.toml
crates/hilbert_space/: Cargo.toml
crates/hilbert_space/src/: dyn_space.rs  lib.rs  operator.rs  static_space.rs
crates/hilbert_space/src/operator/: dyn_operator.rs  static_operator.rs
crates/math_utils/: Cargo.toml
crates/math_utils/src/: bessel.rs  interpolations.rs  legendre.rs  lib.rs
crates/matrix_utils/: Cargo.toml
crates/matrix_utils/src/: faer.rs  lib.rs  nalgebra.rs  ndarray.rs
crates/propagator/: Cargo.toml
crates/propagator/src/: lib.rs  propagator_watcher.rs  step_strategy.rs
crates/qol_utils/: Cargo.toml
crates/qol_utils/src/: lib.rs  params.rs  potential_loader.rs  problem_selector.rs  saving.rs
crates/single_chan/: Cargo.toml
crates/single_chan/src/: interaction.rs  lib.rs  ratio_numerov.rs  s_matrix.rs  step_strategy.rs
crates/single_chan/src/interaction/: composite.rs  composite_int.rs  dispersion.rs  func_potential.rs  morse_long_range.rs  scaled_interaction.rs
crates/spin_algebra/: Cargo.toml
crates/spin_algebra/src/: lib.rs
example_calculations/atom_rotor/: Cargo.toml
example_calculations/atom_rotor/src/: caf_rb_problem.rs  main.rs  model_problem.rs
example_calculations/li2_feshbach/: Cargo.toml
example_calculations/li2_feshbach/src/: main.rs
example_calculations/srf_rb_feshbach/: Cargo.toml
