[workspace]
members = [ "crates/math_utils", "crates/qol_utils", "crates/constants", "crates/hilbert_space"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
faer = "0.22.6"
rayon = "1.6.0"

num-complex = "0.4.6"
num-traits = "0.2.19"

anyhow = "1.0.98"
log = "0.4.27"
simple_logger = {version = "5.0.0", default-features = false, features = ["colors"]}

serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

[profile.dev.package.faer]
opt-level = 3
