[workspace]
members = [ 
    "benches", 

    "crates/math_utils", 
    "crates/qol_utils", 
    "crates/constants", 
    "crates/hilbert_space", 
    "crates/matrix_utils", 
    "crates/spin_algebra", 
    "crates/single_chan", 
    "crates/propagator", 
    "crates/coupled_chan", 
    "crates/cc_problems", 

    "example_calculations/li2_feshbach",
    "example_calculations/atom_rotor",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rayon = "1.11.0"

num-complex = "0.4.6"
num-traits = "0.2.19"

anyhow = "1.0"

serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
dyn-clone = "1.0"

faer = "0.23"
nalgebra = "0.34"
ndarray = "0.16.1"

clebsch-gordan = { git = "https://github.com/Wleter/clebsch-gordan", branch = "master" }
cc_problems = { path = "crates/cc_problems" }

[profile.dev.package.faer]
opt-level = 3
