[package]
name = "coupled_chan"
version.workspace = true
edition.workspace = true

[dependencies]
num-complex = {workspace = true}
faer = {workspace = true}
matrix_utils = {path = "../matrix_utils", features = ["faer"]}
single_chan = {path = "../single_chan"}
propagator = {path = "../propagator"}
constants = {path = "../constants"}
math_utils = {path = "../math_utils"}
hilbert_space = {path = "../hilbert_space"}