[package]
name = "hilbert_space"
version.workspace = true
edition.workspace = true

[dependencies]
dyn-clone = "1.0"
downcast-rs = "2.0"
num-traits = {workspace = true}
faer = {version = "0.22.6", optional = true}
nalgebra = {version = "0.33.2", optional = true}
ndarray = {version = "0.16.1", optional = true}

[features]
faer = ["dep:faer"]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]