[package]
name = "math_utils"
version.workspace = true
edition.workspace = true

[dependencies]
puruspe = "0.4.1"
faer = { workspace = true }
nalgebra = { workspace = true, optional = true}
ndarray = { workspace = true, optional = true}

[features]
faer = []
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]