[package]
name = "matrix_utils"
version.workspace = true
edition.workspace = true

[dependencies]
faer = { workspace = true, optional = true}
nalgebra = { workspace = true, optional = true}
ndarray = { workspace = true, optional = true}

[features]
faer = ["dep:faer"]
nalgebra = ["dep:nalgebra"]
ndarray = ["dep:ndarray"]