[package]
name = "qol_utils"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = {workspace = true}
log = {workspace = true}
dyn-clone = "1.0"
downcast-rs = "2.0"

serde = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
simple_logger = {workspace = true}