[package]
name = "qol_utils"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = {workspace = true}
dyn-clone = "1.0"
downcast-rs = "2.0"
spline-interpolation = { git = "https://github.com/Wleter/spline-interpolation.git" }

serde = {workspace = true}
serde_json = {workspace = true}
